Fix scroll view height on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -45,7 +45,7 @@
 
 #contact {
   padding-top: 82px;
-  height: calc(100vh - 82px);
+  height: calc(100vh - 81px);
 }
 
 .content a:hover {
